--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,3 +43,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/trivia-app:latest
+          build-args: PASS=${{secrets.PASS}}
