--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -36,7 +36,8 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         
-      - name: Build and push
+      - name: Build and push 
+        working-directory: ./frontend
         uses: docker/build-push-action@v2
         with:
           context: .
