--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -37,10 +37,9 @@ jobs:
         uses: docker/setup-buildx-action@v1
         
       - name: Build and push 
-        working-directory: ./frontend
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./frontend
           file: ./frontend/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/trivia-app-frontend:latest
