--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "trivia-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://api:80/",
+  "proxy": "https://trivia-app.charo.gg/",
   "dependencies": {
     "corsproxy": "^1.5.0",
     "jquery": "^3.4.1",
