--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -28,13 +28,13 @@ CMD ["npm", "start"]
 
 
 
-# # server environment
-# FROM nginx:alpine
-# COPY nginx.conf /etc/nginx/conf.d/configfile.template
+# server environment
+FROM nginx:alpine
+COPY nginx.conf /etc/nginx/conf.d/configfile.template
 
-# COPY --from=react-build /app/build /usr/share/nginx/html
+COPY --from=react-build /app/build /usr/share/nginx/html
 
-# ENV PORT 80
-# ENV HOST 0.0.0.0
-# EXPOSE 80
-# CMD sh -c "envsubst '\$PORT' < /etc/nginx/conf.d/configfile.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+ENV PORT 80
+ENV HOST 0.0.0.0
+EXPOSE 80
+CMD sh -c "envsubst '\$PORT' < /etc/nginx/conf.d/configfile.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
