--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,30 +1,30 @@
-FROM node:13.12.0-alpine
-
-# set working directory
-WORKDIR /app
-
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
-ENV PORT 80
-# install app dependencies
-COPY package.json ./
-COPY package-lock.json ./
-RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
-
-# add app
-COPY . ./
-
-# start app
-CMD ["npm", "start"]
-
-# # build environment
 # FROM node:13.12.0-alpine as react-build
+
+# # set working directory
 # WORKDIR /app
+
+# # add `/app/node_modules/.bin` to $PATH
+# ENV PATH /app/node_modules/.bin:$PATH
 # ENV PORT 80
+# # install app dependencies
+# COPY package.json ./
+# COPY package-lock.json ./
+# RUN npm install --silent
+# RUN npm install react-scripts@3.4.1 -g --silent
+
+# # add app
 # COPY . ./
-# RUN npm install
-# RUN npm run build
+
+# # start app
+# CMD ["npm", "start"]
+
+# build environment
+FROM node:13.12.0-alpine as react-build
+WORKDIR /app
+ENV PORT 80
+COPY . ./
+RUN npm install
+RUN npm run start
 
 
 
