--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,6 +8,10 @@ server {
         try_files $uri /index.html;
     }
 
+    location /api/ {
+        proxy_pass         https://trivia-app.charo.gg/;
+    }
+
     gzip on;
     gzip_vary on;
     gzip_min_length 10240;
